# Galaxy-Engine

./: .gitignore  CMakeLists.txt
ExampleMod/: CMakeLists.txt  Mod.cpp  README.md
GalaxyEngine/include/: pch.h
GalaxyEngine/include/Mod/: modState.h
GalaxyEngine/include/Physics/: slingshot.h
GalaxyEngine/src/: globalLogic.cpp  main.cpp
GalaxyEngine/src/Mod/: modState.cpp
GalaxyEngine/src/Particles/: particleSelection.cpp  particleSubdivision.cpp  particleTrails.cpp  particlesSpawning.cpp
GalaxyEngine/src/Physics/: SPH.cpp  morton.cpp  physics.cpp  quadtree.cpp  slingshot.cpp
GalaxyEngine/src/Sound/: sound.cpp
GalaxyEngine/src/UI/: UI.cpp  brush.cpp  controls.cpp  rightClickSettings.cpp
GalaxyEngine/src/UX/: camera.cpp  saveSystem.cpp  screenCapture.cpp
